name:                tabular
version:             0.1
synopsis:            Two-dimensional data tables with rendering functions
description:         Tabular provides a Haskell representation of two-dimensional
                     data tables, the kind that you might find in a spreadsheet or
                     or a research report.  It also comes with some default
                     rendering functions for turning those tables into ASCII art,
                     HTML or LaTeX.
category:            Text
license:             BSD3
license-file:        LICENSE
author:              Eric Kow
maintainer:          <E.Y.Kow@brighton.ac.uk>
build-Depends:       base >= 2.1 && < 3.1, mtl >= 1 && < 1.2
build-type:          Simple
ghc-options:
exposed-modules:     Text.Tabular, Text.Tabular.AsciiArt
